add the next js toploader to show a loading state since we server render

--- a/src/content/typescript/day-1-hello-world.mdx
+++ b/src/content/typescript/day-1-hello-world.mdx
@@ -1,2 +1,31 @@
 
-Hello, world! THis is the puzzle description written in an mdx file!
+Hello, world! this is the puzzle description written in an mdx file!
+
+```ts
+export const myFunction = () => {
+  console.log("Syntax highlighting should be working")
+}
+```
+
+- also
+- we 
+- have
+- lists
+
+
+1. and
+2. numbered
+3. lists
+
+
+# Header 1
+## Header 2
+### Header 3
+#### Header 4
+
+Honestly, anything past h4 is just plain ridiculous and evidence that you should really restructure your content. We can do *italics* for emphasis and **bold** for much stronger emphasis.
+
+In the middle of a sentence, we may want to do `code` and then just continue on with life.
+
+Sometimes, we may also want to link to somewhere else, like just an [example link](https://google.com) to google.
+
