update the second lesson

--- a/src/content/typescript/day-1-hello-world.mdx
+++ b/src/content/typescript/day-1-hello-world.mdx
@@ -120,5 +120,7 @@ Somewhere along the way one of these instructions for setting up your environmen
 console.log("Hello, world!");
 ```
 
+We also now know that `console.log(string)` is the way to output text. `console` is a global object as defined [here](https://nodejs.org/api/console.html) (this is the node page because bun and node's console interfaces are nearly identical. Bun provides some [extra apis](https://bun.com/docs/api/console).). The `log` method is a method attatched to the global console object and we use the `.` operator to access it like we would on other languages.
+
 
 Once you have that successfully outputting, post your solution by pressing the "Post solution" button. The next puzzle will open tomorrow, where we will actually write some real code. 
